<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/splashFragment">

    <fragment
        android:id="@+id/splashFragment"
        android:name="com.example.aisle.ui.splash.SplashFragment"
        android:label="@string/splash_fragment" >

        <action
            android:id="@+id/action_splashFragment_to_otpFragment"
            app:destination="@id/otpFragment"
            app:popUpTo="@id/splashFragment"
            app:popUpToInclusive="true"/>
        <action
            android:id="@+id/action_splashFragment_to_homeFragment"
            app:destination="@id/homeFragment"
            app:popUpTo="@id/splashFragment"
            app:popUpToInclusive="true"/>
    </fragment>

    <fragment
        android:id="@+id/otpFragment"
        android:name="com.example.aisle.ui.otp.OtpFragment"
        android:label="@string/otp_fragment" >

        <action
            android:id="@+id/action_otpFragment_to_otpVerifyFragment"
            app:destination="@id/otpVerifyFragment" />
    </fragment>

    <fragment
        android:id="@+id/otpVerifyFragment"
        android:name="com.example.aisle.ui.verify.OtpVerifyFragment"
        android:label="@string/verify_fragment" >

        <argument
            android:name="mobileNumber"
            app:argType="string"
            app:nullable="false"
            android:defaultValue="0" />
        <action
            android:id="@+id/action_otpVerifyFragment_to_homeFragment"
            app:destination="@id/homeFragment"
            app:launchSingleTop="true"
            app:popUpTo="@id/nav_graph"
            app:popUpToInclusive="true"/>
    </fragment>
    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.aisle.ui.home.HomeFragment"
        android:label="@string/homeFragment" />
</navigation>