<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/tools">

    <data>

        <variable
            name="homeViewModel"
            type="com.example.aisle.ui.home.HomeViewModel" />

        <variable
            name="clickListener"
            type="android.view.View.OnClickListener" />

        <variable
            name="productListResponse"
            type="com.example.api.model.response.ProfileListResponse" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="none">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_padding_18dp">

            <TextView
                android:id="@+id/tvHeading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_padding_20dp"
                android:text="@string/notes"
                android:textAppearance="?attr/textAppearanceHeadline4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvSubHeading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/personal_messages_to_you"
                android:textAppearance="?attr/textAppearanceHeadline5"
                app:layout_constraintEnd_toEndOf="@id/tvHeading"
                app:layout_constraintStart_toStartOf="@id/tvHeading"
                app:layout_constraintTop_toBottomOf="@id/tvHeading" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/ivMain"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginTop="@dimen/margin_padding_18dp"
                app:cardCornerRadius="@dimen/margin_padding_18dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvSubHeading">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="matrix"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        bind:imageUrl="@{productListResponse.invites.profiles.get(0).photos.get(0).photo}" />

                    <TextView
                        android:id="@+id/tvNameAge"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/margin_padding_18dp"
                        android:text="@{productListResponse.invites.profiles.get(0).generalInformation.nameAndAge}"
                        android:textAppearance="?attr/textAppearanceHeadline5"
                        android:textColor="@color/white"
                        app:layout_constraintBottom_toTopOf="@id/tvNameText"
                        app:layout_constraintStart_toStartOf="parent" />

                    <TextView
                        android:id="@+id/tvNameText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/margin_padding_18dp"
                        android:text="@string/tap_to_review_50_notes"
                        android:textAppearance="?attr/textAppearanceHeadline6"
                        android:textColor="@color/white"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="@id/tvNameAge" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:id="@+id/tvText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_padding_18dp"
                android:layout_marginTop="@dimen/margin_padding_18dp"
                android:text="@string/interested_in_you"
                android:textAppearance="?attr/textAppearanceHeadline5"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/ivMain"
                app:layout_constraintTop_toBottomOf="@id/ivMain" />

            <TextView
                android:id="@+id/tvSubText"
                android:layout_width="@dimen/match_constraints"
                android:layout_height="wrap_content"
                android:text="@string/premium_members_can_view_all_their_likes_at_once"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                android:textColor="@color/grey"
                app:layout_constraintEnd_toStartOf="@id/btnUpgrade"
                app:layout_constraintStart_toStartOf="@id/tvText"
                app:layout_constraintTop_toBottomOf="@id/tvText" />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnUpgrade"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_padding_10dp"
                android:background="@drawable/ic_yellow_round"
                android:onClick="@{clickListener}"
                android:paddingHorizontal="@dimen/margin_padding_18dp"
                android:paddingVertical="@dimen/margin_padding_8dp"
                android:text="@string/upgrade"
                android:textAppearance="?attr/textAppearanceHeadline6"
                android:textColor="@color/black"
                app:backgroundTint="@color/lime"
                app:layout_constraintBottom_toBottomOf="@id/tvSubText"
                app:layout_constraintEnd_toEndOf="@id/ivMain" />


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvProfiles"
                android:layout_width="@dimen/match_constraints"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_padding_18dp"
                android:overScrollMode="never"
                android:paddingBottom="@dimen/margin_padding_18dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvSubText" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>